AWS section Table contents link back to home

--- a/cloud-computing/aws/s3.md
+++ b/cloud-computing/aws/s3.md
@@ -1,3 +1,13 @@
+- [Storage Objects](#storage-objects)
+      - [List objects and sort by `LastModified` field](#list-objects-and-sort-by-lastmodified-field)
+      - [List contents of a bucket and export to a text file](#list-contents-of-a-bucket-and-export-to-a-text-file)
+      - [List number of S3 buckes](#list-number-of-s3-buckes)
+      - [Simplififed S3 listing of buckets](#simplififed-s3-listing-of-buckets)
+      - [Copy directories/files to S3 given bucket excuding .git files](#copy-directoriesfiles-to-s3-given-bucket-excuding-git-files)
+      - [How Much Data is in Each of my Buckets?](#how-much-data-is-in-each-of-my-buckets)
+      - [Prefer to have that is dollars per month?](#prefer-to-have-that-is-dollars-per-month)
+
+[Kiwiki Home](/../../)
 # Storage Objects
 
 #### List objects and sort by `LastModified` field
