S3 Empty & delete Non-Versioned bucket

--- a/cloud-computing/aws/s3.md
+++ b/cloud-computing/aws/s3.md
@@ -50,6 +50,12 @@ for bucket in $(aws s3api list-buckets --query "Buckets[].Name" --output text --
  0) * .023 / (1024*1024*1024) * 100.0 | floor / 100.0"); done;
 ```
 
+#### Empty & delete Non-Versioned bucket
+```bash
+BUCKET_NAME="todo"
+aws s3 rm "s3://$BUCKET_NAME" --recursive
+aws s3api delete-bucket --bucket "$BUCKET_NAME"
+```
 [Back to top](#)
 
 [Kiwiki Home](/../../)
