--- a/cloud-computing/aws/s3.md
+++ b/cloud-computing/aws/s3.md
@@ -1,7 +1,16 @@
 [Kiwiki Home](/../../)
+
 [Back to Main Page](./readme.md)
 
 # Storage Objects
+## Create Ops
+#### Copy directories/files to S3 given bucket excuding .git files
+
+```bash
+aws s3 cp /tmp/foo s3://bucket/ --recursive --exclude ".git/*"
+```
+
+## Read Ops
 
 #### List objects and sort by `LastModified` field
 
@@ -24,32 +33,41 @@ printf "\n EC2 server name== $(hostname) \n\n" ; aws s3api list-buckets --color 
 printf "\n\t Total number of S3 Bucket objects $(aws s3 ls | wc -l) \n"
 ```
 
-#### Simplififed S3 listing of buckets
+#### List buckets Simplified
 
 ```bash
 printf "\n local servername== $(hostname) \n" ; aws s3 ls ; printf "\n Total number of S3 buckets $(aws s3 ls | wc - l) \n\n"
 ```
 
-#### Copy directories/files to S3 given bucket excuding .git files
-
-```bash
-aws s3 cp /tmp/foo s3://bucket/ --recursive --exclude ".git/*"
-```
-
-#### How Much Data is in Each of my Buckets?
+#### get total Data is in Each of my Buckets?
 
 ```bash
 for bucket in $(aws s3api list-buckets --query "Buckets[].Name" --output text); do aws cloudwatch get-metric-statistics --namespace AWS/S3 --metric-name BucketSizeBytes --dimensions Name=BucketName,Value=$bucket Name=StorageType,Value=StandardStorage --start-time $(date --iso-8601)T00:00 --end-time $(date --iso-8601)T23:59 --period 86400 --statistic Maximum | echo $bucket: $(numfmt --to si $(jq -r ".Datapoints[0].Maximum // 0")); done;
 ```
 
-#### Prefer to have that is dollars per month?
+#### List buckets Prefer cost dollars per month?
 
 ```bash
 AWS_PROFILE_USE="name-of-aws-profile"
-for bucket in $(aws s3api list-buckets --query "Buckets[].Name" --output text --profile $AWS_PROFILE_USE); do aws cloudwatch get-metric-statistics --namespace AWS/S3 --metric-name BucketSizeBytes --dimensions Name=BucketName,Value=$bucket Name=StorageType,Value=StandardStorage --start-time $(date --iso-8601)T00:00 --end-time $(date --iso-8601)T23:59 --period 86400 --statistic Maximum --profile $AWS_PROFILE_USE | echo $bucket: \$$(jq -r "(.Datapoints[0].Maximum //
+BUCKET_LIST="$(aws s3api list-buckets --query "Buckets[].Name" --output text --profile $AWS_PROFILE_USE)"
+
+for bucket in $BUCKET_LIST; do aws cloudwatch get-metric-statistics --namespace AWS/S3 --metric-name BucketSizeBytes --dimensions Name=BucketName,Value=$bucket Name=StorageType,Value=StandardStorage --start-time $(date --iso-8601)T00:00 --end-time $(date --iso-8601)T23:59 --period 86400 --statistic Maximum --profile $AWS_PROFILE_USE | echo $bucket: \$$(jq -r "(.Datapoints[0].Maximum //
  0) * .023 / (1024*1024*1024) * 100.0 | floor / 100.0"); done;
 ```
 
+---
+
+## Update Ops
+
+---
+## Delete Ops
+
+#### Empty & delete Non-Versioned bucket
+```bash
+BUCKET_NAME="todo"
+aws s3 rm "s3://$BUCKET_NAME" --recursive
+aws s3api delete-bucket --bucket "$BUCKET_NAME"
+```
 [Back to top](#)
 
 [Kiwiki Home](/../../)
